--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="mailo">
         <a href="mailto:ayanladeiyanu@gmail.com" ><img id="gmail" src="images/gmail.png"></a>
         <a href="tel: +234-806-289-5521" id="call"><img id="jsh" src="images/contact.png"></a>
-        <!-- <a href="https://www.facebook.com/joshua.ayanlade">Facebook</a> -->
+        <a href="https://www.facebook.com/joshua.ayanlade.3" id="fbk"><img id="fb" src="images/facebook.png"></a>
         </div>
         <ul id="nav2">
                 <img id="omega"  src="images/logo.png">
